[package]
name = "Lepton"
version = "0.1.0"
edition = "2021"

[dependencies]
geese = "0.3.10"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
wgpu = "22.0"
bytemuck = { version = "1.16", features = ["derive"] }
log = "0.4"
pollster = "0.3"
binary-greedy-meshing = "0.3.6"
dot_vox = "5.1.1"
cgmath = "0.18.0"
anyhow = "1.0.93"
